--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "CLI",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "git@github.com:bolawen/CLI.git",
   "author": "zhangwenqiang <335303383@qq.com>",
   "license": "MIT",
   "bin": {
-    "bolawen": "index.js"
+    "bolawen": "bin/bolawen.js"
   },
   "dependencies": {
-    "commander": "^7.2.0",
+    "chalk": "^4.1.1",
+    "commander": "6.0.0",
     "download-git-repo": "^3.0.2",
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "inquirer": "^8.1.0",
+    "log-symbols": "4.0.0",
+    "ora": "^5.4.1"
   }
 }
