--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "CLI",
+  "name": "bolawen-cli",
   "version": "1.0.0",
-  "repository": "git@github.com:bolawen/CLI.git",
+  "repository": "git@github.com:bolawen/bolawen.git",
   "author": "zhangwenqiang <335303383@qq.com>",
   "license": "MIT",
   "bin": {
