--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bolawen-cli",
-  "version": "1.0.5",
-  "repository": "git@github.com:bolawen/bolawen.git",
+  "version": "1.0.6",
+  "repository": "git@github.com:bolawen/cli.git",
   "author": "zhangwenqiang <335303383@qq.com>",
   "license": "MIT",
   "bin": {
