--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "bin": {
     "bolawen": "bin/bolawen.js"
   },
+  "scripts": {
+    "push": "git add . && git commit -m 推送 && git push origin master",
+    "pull": "git fetch --all && git reset --hard origin/master && git pull origin master"
+  },
   "dependencies": {
     "chalk": "^4.1.1",
     "commander": "6.0.0",
