--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.6",
     "inquirer": "^8.1.0",
     "log-symbols": "4.0.0",
-    "ora": "^5.4.1"
+    "ora": "^5.4.1",
+    "ttab": "^0.8.0"
   }
 }
